; ModuleID = '/home/carl/AnghaBench/vlc/modules/lua/extr_extension_thread.c_QueueDeactivateCommand.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/lua/extr_extension_thread.c_QueueDeactivateCommand.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__* }
%struct.TYPE_4__ = type { i32, %struct.command_t* }
%struct.command_t = type { %struct.command_t*, i32 }

@CMD_DEACTIVATE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @QueueDeactivateCommand(%struct.TYPE_5__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca %struct.command_t*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  %5 = call %struct.command_t* @calloc(i32 1, i32 16)
  store %struct.command_t* %5, %struct.command_t** %4, align 8
  %6 = load %struct.command_t*, %struct.command_t** %4, align 8
  %7 = icmp eq %struct.command_t* %6, null
  %8 = zext i1 %7 to i32
  %9 = call i64 @unlikely(i32 %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %58

12:                                               ; preds = %1
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %13, i32 0, i32 0
  %15 = load %struct.TYPE_4__*, %struct.TYPE_4__** %14, align 8
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 1
  %17 = load %struct.command_t*, %struct.command_t** %16, align 8
  %18 = icmp ne %struct.command_t* %17, null
  br i1 %18, label %19, label %28

19:                                               ; preds = %12
  %20 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %20, i32 0, i32 0
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %21, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 1
  %24 = load %struct.command_t*, %struct.command_t** %23, align 8
  %25 = getelementptr inbounds %struct.command_t, %struct.command_t* %24, i32 0, i32 0
  %26 = load %struct.command_t*, %struct.command_t** %25, align 8
  %27 = call i32 @FreeCommands(%struct.command_t* %26)
  br label %28

28:                                               ; preds = %19, %12
  %29 = load i32, i32* @CMD_DEACTIVATE, align 4
  %30 = load %struct.command_t*, %struct.command_t** %4, align 8
  %31 = getelementptr inbounds %struct.command_t, %struct.command_t* %30, i32 0, i32 1
  store i32 %29, i32* %31, align 8
  %32 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %33 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %32, i32 0, i32 0
  %34 = load %struct.TYPE_4__*, %struct.TYPE_4__** %33, align 8
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 1
  %36 = load %struct.command_t*, %struct.command_t** %35, align 8
  %37 = icmp ne %struct.command_t* %36, null
  br i1 %37, label %38, label %46

38:                                               ; preds = %28
  %39 = load %struct.command_t*, %struct.command_t** %4, align 8
  %40 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %41 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %40, i32 0, i32 0
  %42 = load %struct.TYPE_4__*, %struct.TYPE_4__** %41, align 8
  %43 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %42, i32 0, i32 1
  %44 = load %struct.command_t*, %struct.command_t** %43, align 8
  %45 = getelementptr inbounds %struct.command_t, %struct.command_t* %44, i32 0, i32 0
  store %struct.command_t* %39, %struct.command_t** %45, align 8
  br label %52

46:                                               ; preds = %28
  %47 = load %struct.command_t*, %struct.command_t** %4, align 8
  %48 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %49 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %48, i32 0, i32 0
  %50 = load %struct.TYPE_4__*, %struct.TYPE_4__** %49, align 8
  %51 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %50, i32 0, i32 1
  store %struct.command_t* %47, %struct.command_t** %51, align 8
  br label %52

52:                                               ; preds = %46, %38
  %53 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %54 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %53, i32 0, i32 0
  %55 = load %struct.TYPE_4__*, %struct.TYPE_4__** %54, align 8
  %56 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %55, i32 0, i32 0
  %57 = call i32 @vlc_cond_signal(i32* %56)
  store i32 1, i32* %2, align 4
  br label %58

58:                                               ; preds = %52, %11
  %59 = load i32, i32* %2, align 4
  ret i32 %59
}

declare dso_local %struct.command_t* @calloc(i32, i32) #1

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @FreeCommands(%struct.command_t*) #1

declare dso_local i32 @vlc_cond_signal(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
